--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Puerto de mi servidor
 PORT = 8080
 DOMAIN = http://localhost
-MONGODB_URI = mongodb+srv://karinahnatova:<Greo6789>@cei-valencia.sl8cxae.mongodb.net/project?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://karinahnatova:Greo6789@cei-valencia.sl8cxae.mongodb.net/
 # Datos de mi base de datos
 DB_USER = karinahnatova
 DB_PASS = Greo6789
